fix stretched images in blog posts on iphone

--- a/themes/exposures/static/css/custom.css
+++ b/themes/exposures/static/css/custom.css
@@ -551,6 +551,7 @@ a {
 
 .blog_image_double img {
     margin-bottom: 5px;
+    max-width: 100%;
 }
 
 @media screen and (min-width: 600px) {
